--- a/version_9/src/main/resources/templates/home.html
+++ b/version_9/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
-<html xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
@@ -119,13 +119,15 @@ desired effect
                         <h3 class="box-title" data-th-text="${ballot.id}+' : '+${ballot.question}">Question</h3>
                     </div><!-- /.box-header -->
                     <div class="box-body noPaddingTop">
-                            <input type="hidden" name="id" data-th-value="${ballot.id}" value="0"/>
-                            <div class="ballotAnswers">
-                                <div class="radio" data-th-each="answer,status : ${ballot.answers}">
-                                    <label><input type="radio" name="answerIndex" data-th-value="${status.index}" data-th-text="${answer}" >option</input></label>
-                                </div>
+                        <input type="hidden" name="id" data-th-value="${ballot.id}" value="0"/>
+                        <input type="hidden" name="latitude" value="0"/>
+                        <input type="hidden" name="longitude" value="0"/>
+                        <div class="ballotAnswers">
+                            <div class="radio" data-th-each="answer,status : ${ballot.answers}">
+                                <label><input type="radio" name="answerIndex" data-th-value="${status.index}" data-th-text="${answer}" >option</input></label>
                             </div>
-                            <button type="submit" class="btn btn-default btn-success">Confirm</button>
+                        </div>
+                        <button type="submit" class="btn btn-default btn-success">Confirm</button>
                     </div><!-- /.box-body -->
                 </div><!-- /.box -->
             </form>
@@ -189,9 +191,8 @@ desired effect
             <!-- /.tab-pane -->
             <!-- Settings tab content -->
             <div class="tab-pane" id="control-sidebar-settings-tab">
+                <h3 class="control-sidebar-heading">General Settings</h3>
                 <form method="post">
-                    <h3 class="control-sidebar-heading">General Settings</h3>
-
                     <div class="form-group">
                         <label class="control-sidebar-subheading">
                             Report panel usage
@@ -217,6 +218,36 @@ desired effect
 
 <!-- REQUIRED JS SCRIPTS -->
 <!--/*/ <th:block th:include="fragments/MasterPage :: scripts"></th:block> /*/-->
+<script th:inline="javascript">
+/*<![CDATA[*/
+
+    $(function () {
+        // Location the positon and set all the forms
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(updatePosition);
+        } else {
+            alert( "Geolocation is not supported by this browser." );;
+        }
+    });
+
+    function updatePosition(position) {
+        // get all latitudes
+        var group = $('input[name="latitude"]');
+        if (group.length > 1) {
+            group.each(function () {
+                $(this).attr("value",position.coords.latitude);
+            });
+        }
+        // get all longitudes
+        group = $('input[name="longitude"]');
+        if (group.length > 1) {
+            group.each(function () {
+                $(this).attr("value",position.coords.longitude);
+            });
+        }
+    }
+/*]]>*/
+</script>
 
 </body>
 </html>
