--- a/version_10/src/main/resources/templates/login.html
+++ b/version_10/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
     </div>
 
     <form role="form" action="/login" method="post">
-      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+      <!--input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /-->
       <div class="form-group has-feedback">
         <input type="email" class="form-control" placeholder="Email" name="email" autofocus="true"/>
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
